--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-dark bg-primary">
-    <a href="/" class="navbar-brand">
+    <a href="/" class="navbar-brand" style="margin-left: 10px;">
         Blog
     </a>
 
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav col-lg-11">
         <li class="nav-item">
             <a class="nav-link" href="/admin/categories">Categories</a>
         </li>
