--- a/views/admin/categories/edit.ejs
+++ b/views/admin/categories/edit.ejs
@@ -5,12 +5,12 @@
     <hr>
     <div class="card">
         <div class="card-header">
-            <h2>Category Registration</h2>
+            <h2>Update Category</h2>
         </div>
         <div class="card-body">
-            <form action="/admin/categories" method="post">
-                <input class="form-control" type="text" name="title" placeholder="Difine the category title"><br>
-                <button class="btn btn-success" type="submit">Register</button>
+            <form action="/admin/categories/<%= category.id %>/edit" method="post">
+                <input class="form-control" value="<%= category.title %> " type="text" name="title"><br>
+                <button class="btn btn-success" type="submit">Udate</button>
             </form>
         </div>
     </div>
