--- a/views/admin/categories/new.ejs
+++ b/views/admin/categories/new.ejs
@@ -5,12 +5,12 @@
     <hr>
     <div class="card">
         <div class="card-header">
-            <h2>Category Registration</h2>
+            <h2>New Category</h2>
         </div>
         <div class="card-body">
             <form action="/admin/categories" method="post">
-                <input class="form-control" type="text" name="title" placeholder="Difine the category title"><br>
-                <button class="btn btn-success" type="submit">Register</button>
+                <input class="form-control" type="text" name="title" placeholder="Category's title"><br>
+                <button class="btn btn-success" type="submit">Create</button>
             </form>
         </div>
     </div>
