--- a/views/admin/articles/new.ejs
+++ b/views/admin/articles/new.ejs
@@ -11,6 +11,12 @@
             <form action="/admin/articles" method="post">
                 <input class="form-control" type="text" name="title" placeholder="Article's title"><br/>
                 <textarea class="form-control" id="article" name="body" placeholder="Type the article here"></textarea> <br/>
+                <label>Category</label>
+                <select name="category" class="form-control">
+                    <% categories.forEach((category) => { %> 
+                        <option value="<%= category.id %>"><%= category.title %> </option>
+                    <%}) %> 
+                </select><br>
                 <button class="btn btn-success" type="submit">Create</button> 
             </form>
         </div>
