--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a href="/" class="navbar-brand" style="margin-left: 10px;">
         Blog
     </a>
@@ -6,6 +6,9 @@
     <ul class="navbar-nav col-lg-11">
         <li class="nav-item">
             <a class="nav-link" href="/admin/categories">Categories</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/admin/articles">Articles</a>
         </li>
     </ul>
 </nav>
